--- a/Final Year Project Dissertation/techreview.tex
+++ b/Final Year Project Dissertation/techreview.tex
@@ -21,7 +21,7 @@ With new ideas comes an influx of questions, the main two being the how and the 
 So why this particular application and why would it be purposeful in the industry of retail. This interesting piece \cite{gustavsson2011global} provides incentive information about the global food wastage problem, this application will address this issue not just locally but globally. This piece proves it is an issue worldwide and with this application i hope that it can be a massive help in reducing this worrying statistic and flatten the curve of this problem as food wastage is still on the rise. This will help staff in finding the products before they go out of date and take action. Be it reducing that particular item or using that product for something in the shop, for example identifying a packet of sausages or rashers and putting giving them to the deli staff to cook and sell in the hot deli. This is a norm in the shop i currently work in part time and i feel this is making a difference however more can be done like always. Of course you are not going to be able to give every product close to it's sell by date to the deli or reduce it. This isn't going to solve the issue entirely but help it as much as it can. 
 
 \subsection{Beneficial and Sufficient}
-Before pursuing a Date Control Application for Retail i wanted to know would it be beneficial to staff members and superiors in the workplace. I conducted a minor survey enclosed within my workplace to get some feedback for this potential idea. Which i will show the results in the Surveys section below. I personally believe this application idea will be very beneficial and sufficient for retailers across the country and even beyond and the good thing about this application is that it is not intense or in anyway complicated it is basic and easy to use for the staff member or user. It is not made to look exquisite it is made to solve or help an global issue in food wastage and to save shops time and money.
+Before pursuing a Date Control Application for Retail, i wanted to know would it be beneficial to staff members and superiors in the workplace. I conducted a minor survey enclosed within my workplace to get some feedback for this potential idea. Which i will show the results in the Surveys section below. I personally believe this application idea will be very beneficial and sufficient for retailers across the country and even beyond and the good thing about this application is that it is not intense or in anyway complicated it is basic and easy to use for the staff member or user. It is not made to look exquisite it is made to solve or help an global issue in food wastage and to save shops time and money.
 \newline
 
 Outside of retail can this be beneficial and sufficient to other industries or organisations ? I very much think so. I feel it can be beneficial to the likes of charities and food banks. Items that may not be eligible for returns for credits can be donated to food banks or charities or even compost companies. \cite{riches1986food} Here is an interesting read on food banks and the welfare crisis in which it looks at the benefits of food banks for society. This is one of the many reasons why food wastage is a global issue that i hope this basic but sufficient application can address and aid in diluting these issues. 
@@ -34,7 +34,7 @@ Outside of retail can this be beneficial and sufficient to other industries or o
 	\includegraphics[width=0.35\textwidth]{images/cbe.jpg}
 \end{figure}
 
-The purpose of this application other than helping the retailers directly is offering this idea or application to my local retail database and till provider known as CBE. They control the inventory of the shops and provide the retailers with modern day tills all across connacht. Having five years experience with their system i know that they don't offer the idea that i am trying to implement. I can see this being very beneficial and suffiecnet to them in saving them time and money and providing an extra service to their loyal customers. \newline
+The purpose of this application other than helping the retailers directly is offering this idea or application to my local retail database and till provider known as CBE. They control the inventory of the shops and provide the retailers with modern day tills all across Connacht. Having five years experience with their system i know that they don't offer the idea that i am trying to implement. I can see this being very beneficial and sufficient to them in saving them time and money and providing an extra service to their loyal customers. \newline
 Here are some images on the permission of my superiors of the CBE Database system of where the stock is recorded as waste or returns:
 
 \begin{figure}[h!]
@@ -84,13 +84,13 @@ In order to prove the idea of implementing a Date Control Application into the w
 	\includegraphics[width=0.8\textwidth]{images/AF-Date-Control-Survey.PNG}
 \end{figure}
 
-This more or less is a second opinion in creating this application. Hearing different opinions being positive or negative is always good. Even if a negative response is given, it will highlight the pros and cons of this application in a more controlled environment. Does that person think it will benefit them, are they a fan of technology, they may prefer physically looking themselves rather than using an application to find things even if it may take longer in which in creating this application i am trying to save my fellow staff members time with the implementation of this application into the workplace, however everyone is entitled to their opinion. 
+This is a second opinion that will influence in creating this application. Hearing different opinions being positive or negative is always good. Even if a negative response is given, it will highlight the pros and cons of this application in a more controlled environment. Does that person think it will benefit them, are they a fan of technology, they may prefer physically looking themselves rather than using an application to find things even if it may take longer in which in creating this application i am trying to save my fellow staff members time with the implementation of this application into the workplace, however everyone is entitled to their opinion. 
 \newline
 
 This was a major factor in the making and outcome of the application as it gave me more information on what to implement and not implement. I needed to make this application easy to use and understand and to make the application functionality not too complex, making it quick and easy to use for staff and managers. This survey helped in getting a second opinion from someone working in the same role as me. I obviously got opinions from fellow students and my supervisor which were relevant but to get feedback from those who will mainly be using this application was vital in the making of this application and to get an opinion from those who will be using it.
 \newline
 
-The results from this survey are in the system evaluation section of this dissertation. 
+The results from this survey are in the System Evaluation section of this dissertation. 
 
 \subsection{Planning The Project}
 The Planning of this project took place in the first semester for final year where we were told who our project supervisors would be. Once we were told who our supervisors would be i agreed to meet with my supervisor once a week. I am in full support of the provision of supervisors for the Applied Project and Minor Dissertation as it benefited me hugely in the planning of this project. 
@@ -111,7 +111,7 @@ The next phase of planning was to decide on what technology i was to use to deve
 I wanted to implement some elements to my application that may not be present in a CBE add on application or store application. User Authentication was one element that i implemented for thesis purposes that would maybe not be on a CBE application for various reasons such as time for the staff member to register an account or sign into an account, this applications purpose is to save time for staff not hinder them. Also i wanted to implement a product details form due to the limitation of not having a shops database at my disposal, this is included in this application to indicate the purpose of the application. To show product details and when their best before date is. So in terms of a real life situation, User Authentication and a product form wouldn't need to be required for the purpose of this idea. 
 \newline
 
-The plan to use Angular Firebase had to change in the early stages of software development for this project. I decided to switch to ionic firebase. There are various similarities between angular and ionic but i felt more comfortable with ionic than i did angular and not to mention i liked the end product of an ionic application rather than angular. Thankfully i changed the plan at the early stage of development.
+The plan to use Angular Firebase had to change in the early stages of software development for this project. I decided to switch to Ionic Firebase. There are various similarities between angular and ionic but i felt more comfortable with ionic than i did angular and not to mention i liked the end product of an ionic application rather than angular. Thankfully i changed the plan at the early stage of development.
 
 \subsection{Technologies}
 The Technologies i used to develop my idea were as follows:
@@ -172,13 +172,13 @@ Out of the four years of studying software development, Ionic and Angular stood 
 \newline
 
 \begin{figure}[h!]
-	\caption{This project dissertation was edited on Overleaf in LaTex.}
+	\caption{This project dissertation was edited on Overleaf in LaTeX.}
 	\label{image:overleaf-latex}
 	\centering
 	\includegraphics[width=0.4\textwidth]{images/overleaf-latex.png}
 \end{figure}
-
-- Overleaf - I am using overleaf as a Latex editor for this project dissertation. I used this template provided to us from our year head.
+\newpage
+- Overleaf - I used overleaf as a Latex editor for this project dissertation. I used this template provided to us from our year head. I only came across Overleaf with LaTeX in the first semester of final year where much like this section we needed to create a Literature review. This benefited me in terms of writing this dissertation.
 
 \subsection{Issues}
 
@@ -192,15 +192,44 @@ Out of the four years of studying software development, Ionic and Angular stood 
 In every project or idea issues can very easily arise. During the software development you may encounter issues such as compile errors, server errors, and maybe some code implemented that worked on older versions of software, for example, some functions or declarations that work on Ionic 2 wont work on Ionic 5 and so on. HTML issues such as buttons not working, pages not showing due to an error in the code and so on. Issues can very easily arise in any software projects, in fact make that any project whatsoever. In this section i will be discussing the issues that arose for me during the software development part of the project. 
 \newline
 
-The first issue arose when i decided to pursue the Date Control Application in Angular Firebase. Having done Ionic Firebase in Third Year for the group project i wanted to challenge myself in trying out Angular with Firebase. Having set up the authentication with Angular Firebase i didn't like the way it was looking and what it was going to look like when implementing the CRUD functionality to the application.
+The first issue arose when i decided to pursue the Date Control Application in Angular Firebase. Having done Ionic Firebase in Third Year for the group project i wanted to challenge myself in trying out Angular with Firebase. Having set up the authentication with Angular Firebase i didn't like the way it was looking and what it was going to look like when implementing the CRUD functionality to the application. I feel here in the end it was the correct decision in the long run. I referenced my third year project a lot during the making of this application as it too was Ionic Firebase. In terms of experience this worked in my favour. 
 \newline
 
 I then realised that i wanted to pursue this project in Ionic. I made the switch which you can see in the early commits of the software development of the project. I made the switch of course for the reasons mentioned, however i also switched due to the fact i was familiar with Ionic Firebase having completing a project in it before. I liked the look overall of Ionic. This did not hinder me to much in the completion of this application. At that stage i was at the stage of testing the waters, what will and won't work and how it will look in the end. This wasn't a major issue and i was glad i made the switch. 
 \newline
 
-The Next issue that arose was the authentication "reset/forgot" password. %work in progress
+The Next issue that arose was the authentication "reset/forgot" password. After looking at many different tutorials online i was unable to get this function to work. The code is still in the project directory but has to be commented out due to ionic build errors when trying to make the project a Firebase hosted website. Due to the fact if CBE were to implement this application into their systems they may not have the idea of a user authentication system within it, as this is a prototype i feel it does not hinder the overall reasoning for this application. A password reset email can be sent via the Firebase console to the user upon request. This issue is highlighted in the issues section of the GitHub Repository for this project.
 \newline
 
-Another issue that stood out was the sorting issue. I wanted to sort the data read into the Firebase Cloud Database to be loaded into the food groups pages with the best before date closest to the current date to be at the top of the list. %work in progress
+Another issue that stood out was the sorting issue. I wanted to sort the data read into the Firebase Cloud Database to be loaded into the food groups pages with the best before date closest to the current date to be at the top of the list. Unfortunately this feature was not implemented. I tried various different ways to implement it such as a query in the get product details function and also the fetch product details functionality that shows the product details on the page. I even tried to alter the Firebase database to show this by trying to implement rules to do so. I was unable to make this feature work, however the idea was there and may be implemented if taken up by the likes of CBE who may take a different approach in showing data in this format. This issue is highlighted in the issues section of the GitHub Repository for this project.
+\newline
 
-\subsection{Project References}
+A Small bug started to arise when signing into an account also. Where a window pop up gives an error message along the lines of "null is not an object". This issue is also highlighted on GitHub. This does not hinder a sign in, as if you click the log in button again it will sign you in.
+\newline
+
+Thankfully no major issues arose that i expected to arise, for example when making this application a Firebase hosted website i had the fear of when trying to do this will result in the application breaking completely. Since this was at a late stage it was a very fragile time in the software development phase. 
+
+\newpage
+\subsection{Technology References}
+\url{https://developer.okta.com}
+\newline
+\url{https://ionicframework.com/docs/theming/colors}
+\newline
+\url{https://ionicframework.com/docs/building/running}
+\newline
+\url{https://www.tutorialspoint.com/ionic/ionic_colors.htm}
+\newline
+\url{https://ionicons.com/}
+\newline
+\url{https://www.youtube.com/watch?v=M-nTpVIyGw0}
+\newline
+\url{https://devdactic.com/host-ionic-website-firebase/}
+\newline
+\url{https://forum.ionicframework.com/t/how-to-add-styles-to-ion-button-inner-text/148987}
+\newline
+\url{https://ionicframework.com/docs/native/firebase-authentication}
+\newline
+\url{https://www.freakyjolly.com/ionic-firebase-crud-operations/#.XrKlWqhKjIU}
+\newline
+\url{https://github.com/AndreasFahey/ajproject}
+
