--- a/Final Year Project Dissertation/main.tex
+++ b/Final Year Project Dissertation/main.tex
@@ -14,6 +14,7 @@
 \usepackage{eurosym}
 \usepackage{tabularx}
 \usepackage{pbox}
+\usepackage[colorlinks=true,allcolors=blue]{hyperref}
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
 
 \newcommand*{\customTitle}{\begingroup % Create the command for including the title page in the document
