--- a/Final Year Project Dissertation/methodology.tex
+++ b/Final Year Project Dissertation/methodology.tex
@@ -1,5 +1,5 @@
 \chapter{Methodology}
-As mentioned in the introduction above, i looked at my weekly life as inspiration in deciding what type of application i will be making for my final year project. I looked at my place of work in retail in which i have five years experience. I looked at the day to day operations of the shop to see could i find anything that would save time and money. My idea of a Date Control System saves time for staff when looking for items on the shop floor, they could just look at this application that would be linked to the shops stock database to show when products are close, on or past their sell by date, giving staff members the edge in finding all they need, whereas if it's done manually in person a staff member may miss something, putting a customer at risk of buying an out of date product. This idea also saves the shop money as in the sense it gives staff members time to possibly take the product off the shelf and reduce it so the shop could make some money on the item instead of just wasting it or getting very little in credit from the supplier.
+As mentioned in the Introduction, i looked at my weekly life as inspiration in deciding what type of application i will be making for my final year project. I looked at my place of work in retail in which i have five years experience. I looked at the day to day operations of the shop to see could i find anything that would save time, money and address an existing issue. My idea of a Date Control System saves time for staff when looking for items on the shop floor, they could just look at this application that would be linked to the shops stock database to show when products are close, on or past their sell by date, giving staff members the edge in finding all they need, whereas if it's done manually in person a staff member may miss something, putting a customer at risk of buying an out of date product. This idea also saves the shop money as in the sense it gives staff members time to possibly take the product off the shelf and reduce it so the shop could make some money on the item instead of just wasting it or getting very little in credit from the supplier. This was a key part of my methodology.
 \newline
 
 \subsection{Software Development v/s Research Methodology}
@@ -13,8 +13,6 @@ After the past experiences of using the Ionic Framework and Firebase Cloud Stora
 \newline
 
 Research before pursuing a project idea into an application is highly recommended as it gives you insights into peoples opinions, what is needed to make this application beneficial and of course the question of "is it solving a problem". I also needed to refresh myself in terms of Ionic Firebase to be able produce this problem solving application, learning new functional elements and design elements that will make the application easy to use and understand for the shop staff. This was a crucial factor in the software development of this project. Intense research was done on all parts before starting the software development.
-
-
 
 \subsection{Agile / Incremental and iterative approach to development}
 The approach taken to develop this application was based around second opinions from fellow students, my project supervisor and the members of staff i work with. I met with my project supervisor weekly in the first semester of final year to intensely discuss this idea of a Date Control system being implemented into supermarkets and beyond. \newline
