--- a/Final Year Project Dissertation/references.tex
+++ b/Final Year Project Dissertation/references.tex
@@ -1,6 +1,74 @@
 \chapter{References \& Appendices}
 
-%other refs:
-% https://miro.medium.com/max/3336/1*YMFKP8e6kR9cbM3IKXBtLw.png
-% https://subscription.packtpub.com/book/web_development/9781788290920/6/ch06lvl1sec41/how-to-connect-the-firebase-authentication-api-to-a-web-application
-% https://github.com/AndreasFahey/ajproject
+\subsection{Technologies Used References:}
+\url{https://www.overleaf.com}
+\newline
+\url{https://github.com/}
+\newline
+\url{https://code.visualstudio.com/}
+\newline
+\url{https://ionicframework.com}
+\newline
+\url{https://firebase.google.com/}
+\newline
+\url{https://www.meta-chart.com/}
+\newline
+\url{https://www.freelogodesign.org/}
+\newline
+- Microsoft Office - Power Point
+\newline
+- Microsoft Office - Excel
+\newline
+- Microsoft Teams - Meetings and Presentation
+
+\subsection{Dissertation Images References:}
+\url{https://logos-download.com/12885-amazon-web-services-aws-logo-download.html/amazon_web_services_logo_aws}
+\newline
+\url{https://www.neotalogic.com/wp-content/uploads/2019/04/microsoft-azure.png}
+\newline
+\url{https://www.vmcdn.ca/f/files/via/images/best-before.jpg;w=960}
+\newline
+\url{https://www.rai.ie/wp-content/uploads/2015/02/CBE-Logo-250x250.jpg}
+\newline
+\url{https://firebase.google.com/downloads/brand-guidelines/PNG/logo-standard.png}
+\newline
+\url{https://i.pinimg.com/600x315/2c/b6/70/2cb670b6ddd8922a1c1b2fee4f6f758c.jpg}
+\newline
+\url{https://upload.wikimedia.org/wikipedia/commons/thumb/d/d1/Ionic_Logo.svg/1200px-Ionic_Logo.svg.png}
+\newline
+\url{https://ionicframework.com/blog/wp-content/uploads/2018/06/firebase_firestore_ionic.png}
+\newline
+\url{https://miro.medium.com/max/10000/1*T64qcW7_VJGfXJSUc6QIKA.png}
+\newline
+\url{https://www.filepicker.io/api/file/CbujYaRfSGikHwnfeG8v}
+\newline
+\url{https://miro.medium.com/max/3336/1*YMFKP8e6kR9cbM3IKXBtLw.png}
+\newline
+\url{https://blog.launchdarkly.com/wp-content/uploads/2018/10/visualstudio_code-card.png}
+\newline
+\url{https://www.brainyquote.com/}
+\newline
+\url{https://pngimage.net/wp-content/uploads/2018/06/problems-png-2.png}
+\newline
+Screenshots:
+\newline
+- Mace Ballinrobe - CBE System 
+\newline
+- AF-Date-Control - Dashboard
+\newline
+
+\subsection{Running the Application}
+Copy and Paste the following URL into a web browser:
+\newline
+\url{https://datecontroldatabase.web.app}
+\newline
+Please register an account and verify the email address. Not verifying will deny you access to the applications dashboard where the main functionality is. When signed in i encourage you to try out the application for yourself.
+\newline
+
+For more information or a more in depth look at the source code and other aspects of this project i would suggest cloning the project GitHub Repository for viewing within a code editor. This can be done by entering the following command into a command prompt:
+\newline
+- git clone https://github.com/AndreasFahey/AppliedProject-DateControl
+\newline
+
+
+
