--- a/Final Year Project Dissertation/sysevaluation.tex
+++ b/Final Year Project Dissertation/sysevaluation.tex
@@ -10,7 +10,7 @@ This project from the outset was to achieve a personal objective of making an ap
 I wanted to conduct a survey among the staff at my workplace to get their valued opinions on this idea that will heavily involve them potentially using this in the future. This feedback will be very relevant to me as it is them that will be the ones using the application on a daily basis. As a result of this i wanted to make this application very easy to use and understand. Not making it complicated to use which will cause for carelessness to use it. Making it quick and easy to use for staff is a prime objective set out from the outset. Once ready the staff will be shown a demonstration of the application to get their thoughts overall.
 \newline
 
-Outside of the purposeful objectives i hoped to learn more and gain more insight into the technologies i would be using throughout the project. I hoped to have learned more about the ionic framework and the firebase cloud database storage. Along with furthering my knowledge in GitHub, Visual Studio Code and Overleaf LaTeX. Beyond this project i wish to develop more ionic applications with the firebase cloud storage and being more knowledgeable in the framework and database will benefit me beyond college and into potential employment.  
+Outside of the purposeful objectives i hoped to learn more and gain more insight into the technologies i would be using throughout the project. I hoped to have learned more about the ionic framework and the Firebase cloud database storage. Along with furthering my knowledge in GitHub, Visual Studio Code and Overleaf LaTeX. Beyond this project i wish to develop more ionic applications with the Firebase cloud storage and being more knowledgeable in the framework and database will benefit me beyond college and into potential employment.  
 
 \subsection{Objectives Met or Not Met}
 With the objectives set out from the outset i am happy to say the majority if not all objectives set out were met to my self satisfaction. There are some minor aspects in the application that i might add in the future to the application, however this is a prototype that is designed in a way to demonstrate to shops and companies who are linked to shops such as CBE. Overall i am pleased with what i produced as it is in my opinion helping an area close to me and knowing it will save staff the hassle of checking every product where as with this they can just see whats close or past its sell by date pinpointing what needs to be done rather than physically looking where it is possible that they might miss something which then puts the customer at risk along with the shop if something were to happen.
@@ -22,7 +22,7 @@ The main objective set out was to develop an application for to improve date che
 I conducted a survey within my workplace which was one of the objectives set out, to get a sort of second opinion on the potential implementation of this application to their daily routine. This objective was met and was crucial in the planning and development of the application, taking into account mainly those who questioned the idea and if it was necessary. I was hoping for a mixture of feedback for this so i was able to then suss out the pros and cons of making this application and potentially using it within the workplace. I appreciated all feedback positive and negative. 
 \newline
 
-I wanted to learn more about the Ionic Framework and Firebase Cloud Database in which i did, which i am pleased with as in the future i hope to develop more projects using these technologies. I learned more specifically about making an application a firebase hosting website which was a first and a sense of achievement that this application was now active and live for people to use instead of running an ionic serve and installing the required libraries to do so which isn't a sufficient way of application usage and demonstration so i was glad tom learn more about this and implement this into my application. There is now a sense of easy transportation of this application rather than having to be just be on one particular device to use the application. I also improved my GitHub knowledge in terms of insights and to show issues within development. I also enhanced my use of Visual Studio Code and the use of command lines. Not to mention improving my newly learned LaTeX skills after first coming across this in the first semester of this academic year. So it is safe to say i improved my usage and skill of the technology used for development in which i am pleased with as it will benefit me for future products outside college. 
+I wanted to learn more about the Ionic Framework and Firebase Cloud Database in which i did, which i am pleased with as in the future i hope to develop more projects using these technologies. I learned more specifically about making an application a Firebase hosting website which was a first and a sense of achievement that this application was now active and live for people to use instead of running an ionic serve and installing the required libraries to do so which isn't a sufficient way of application usage and demonstration so i was glad tom learn more about this and implement this into my application. There is now a sense of easy transportation of this application rather than having to be just be on one particular device to use the application. I also improved my GitHub knowledge in terms of insights and to show issues within development. I also enhanced my use of Visual Studio Code and the use of command lines. Not to mention improving my newly learned LaTeX skills after first coming across this in the first semester of this academic year. So it is safe to say i improved my usage and skill of the technology used for development in which i am pleased with as it will benefit me for future products outside college. 
 \newline
 
 Overall i feel i have met the Objectives and Goals set out in making an application not only for its intended purpose but for a sense of self-achievement for making an application to tackle a global issue when it comes to food wastage and consumption of foods that could endanger a person. During the course of development of this project i had weekly goals and objectives in development which i discussed with my supervisor in our weekly meetings. This is great in terms of getting work done in a timely manner.
@@ -46,7 +46,7 @@ As mentioned in the Technology Review i conducted application tests for the appl
 - Noticed when logging in i have noted a potential bug which i have highlighted on my GitHub Repository where a window popup shows a an email verified null error. When i cancel this and click log in again it allows me to log in. Note if you try log in with an unverified email it will tell you so, this is a different issue but does not hinder application functionality. 
 \newline
 
-- Unfortunately i was unable to get the password recovery/reset function working as you can see in the test document screenshot above it failed. This is also a highlighted issue on my GitHub repository. The code is available but commented out as it was failing in the ionic build command for making the application a firebase website.
+- Unfortunately i was unable to get the password recovery/reset function working as you can see in the test document screenshot above it failed. This is also a highlighted issue on my GitHub repository. The code is available but commented out as it was failing in the ionic build command for making the application a Firebase website.
 
 \subsection{Survey Results}
 
@@ -60,4 +60,4 @@ As mentioned in the Technology Review i conducted application tests for the appl
 Above shows the results of the survey i conducted into a pie chart. It shows that two thought this idea was unnecessary with one reason being "Not everyone is good with technology" and the other reason being "Not necessary, if products are checked regularly there is no need for anything extra". I appreciate the feedback and acknowledge the reasoning. Yes i agree that not everyone is good with technology but i counter that with the fact that technology plays a major role in our lives on a daily basis be it using a computer and even a smart phone which is the norm for phone users nowadays. Technology is taking over so why be left behind. I also agree that if products are checked regularly that it will cover most of the products but not all in my opinion. This application shows exactly what is close or past its sell by date so the staff member can then find the product without having to check every single product. Also, from experience i know working in a shop can be very busy which gives the worker a lack of time to get things done such as date checking, as i have said many times this reduces the time spent date checking while making it more sufficient in the grand scheme of things. 
 \newpage
 \subsection{Limitations}
-There were some limitations in the development of this project. The major one not being able to have access to a shop database to show a full example of the purpose of this application and show what it is intended to do. In lieu of this i added a product entry form to show what it would look like in real time in a shop. I also was unable to implement product data sort by date which will make it easier for the staff members to go to the top of the list of products where they will find products closest or past their sell by dates, but the idea was there. I also discussed the idea of highlighting a product orange if it was two days before going out of date and red if the product is passed its best before date. Maybe in the future i could try implement these aspects to the application to again make it easier for staff members to use and understand. The fact that this is a prototype allows for some stuff not to be implemented as intended as long as the idea is there. Resetting the user password functionality was another aspect i was unable to implement into this application in which i tried, the code is commented out as mentioned above it was throwing errors in the build for the firebase website. Prototypes tend to have certain limitations, however i personally would have liked to have had these characteristics in my application.
+There were some limitations in the development of this project. The major one not being able to have access to a shop database to show a full example of the purpose of this application and show what it is intended to do. In lieu of this i added a product entry form to show what it would look like in real time in a shop. I also was unable to implement product data sort by date which will make it easier for the staff members to go to the top of the list of products where they will find products closest or past their sell by dates, but the idea was there. I also discussed the idea of highlighting a product orange if it was two days before going out of date and red if the product is passed its best before date. Maybe in the future i could try implement these aspects to the application to again make it easier for staff members to use and understand. The fact that this is a prototype allows for some stuff not to be implemented as intended as long as the idea is there. Resetting the user password functionality was another aspect i was unable to implement into this application in which i tried, the code is commented out as mentioned above it was throwing errors in the build for the Firebase website. Prototypes tend to have certain limitations, however i personally would have liked to have had these characteristics in my application.
